--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Space aliens" />
+    <meta name="description" content="Truckers Runing the World " />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Evan" />
     <title>Truckers Runing the World</title>
