--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Truckers Runing the World " />
     <meta name="keywords" content="mths, ics2o" />
-    <meta name="author" content="Evan" />
+    <meta name="author" content="Evan + Batuhan" />
     <title>Truckers Runing the World</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
