--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Space aliens" />
+    <meta name="description" content="Turckers Running the World" />
     <meta name="keywords" content="mths, ics2o" />
-    <meta name="author" content="xxx" />
-    <title>xxx</title>
+    <meta name="author" content="Batuhan" />
+    <title>Truckers Running the World</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
